# tanic

./: .codecov.yml  Cargo.toml  README.md  git-cliff.toml
.github/workflows/: build.yml  codspeed.yml  coverage.yml  pre-release-string-updater.yml
src/: app_message.rs  config.rs  lib.rs
tanic/: Cargo.toml
tanic-core/: Cargo.toml  config.rs  error.rs  lib.rs  message.rs
tanic-svc/: Cargo.toml
tanic-svc/src/: iceberg_context.rs  lib.rs  state.rs
tanic-tui/: Cargo.toml  component.rs  lib.rs  ui_root.rs  ui_state.rs
tanic-tui/connection_list/: mod.rs
tanic-tui/connection_prompt/: mod.rs
tanic-tui/initializing/: mod.rs
tanic-tui/namespace_tree_view/: mod.rs
tanic-tui/table_tree_view/: mod.rs
tanic-tui/ui_components/: app_container.rs  mod.rs  namespace_list_item.rs  namespace_list_view.rs  splash_screen.rs  table_list_item.rs  table_list_view.rs  treemap_layout.rs
tanic/src/: logging.rs  main.rs
