[package]
name = "tanic"
version = "0.1.0"
edition = "2021"
authors = ["Scott Donnelly <scott@donnel.ly>"]
description = ""
keywords = []
readme = "README.md"
repository = "https://github.com/sdd/tanic"
documentation = "https://docs.rs/tanic"
license = "MIT OR Apache-2.0"
autobenches = false
resolver = "2"

[package.metadata.docs.rs]
all-features = true

[lib]
name = "tanic"

[[bin]]
name = "tanic-cli"
path = "src/bin/tanic-cli/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
directories = "6.0.0"
figment = { version = "0.10.19", features = ["env", "toml"] }
http = "1.2.0"
http-serde = "2.1.1"
iceberg = "0.4"
iceberg-catalog-rest = "0.4.0"
miette = { version = "7.4.0", features = ["fancy"] }
ratatui = "0.29"
serde = "1.0.217"
streemap = "0.1"
terminal_size = "0.4.1"
thiserror = "2.0.11"
tokio = "1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
