[workspace]
resolver = "2"

members = [
    "tanic-core",
    "tanic-svc",
    "tanic-tui",
    "tanic",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
repository = "https://github.com/tanic-org/tanic"
license = "Apache-2.0"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
directories = "6"
figment = { version = "0.10", features = ["env", "toml"] }
http = "1"
http-serde = "2"
iceberg = "0.4"
iceberg-catalog-rest = "0.4"
miette = { version = "7", features = ["fancy"] }
ratatui = "0.29"
serde = "1"
streemap = "0.1"
terminal_size = "0.4"
thiserror = "2"
tokio = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
