[package]
name = "tanic"
version = "0.1.0"
edition = "2021"
authors = ["Scott Donnelly <scott@donnel.ly>"]
description = "Tanic CLI"
keywords = []
readme = "README.md"
repository = "https://github.com/tanic-org/tanic/tanic"
documentation = "https://docs.rs/tanic"
license = "MIT OR Apache-2.0"
autobenches = false
resolver = "2"

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "tanic"
path = "src/main.rs"

[dependencies]
tanic-core = { path = "../tanic-core" }
tanic-svc = { path = "../tanic-svc" }
tanic-tui = { path = "../tanic-tui" }

clap = { workspace = true }
http = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
streemap = { workspace = true }
terminal_size = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
